--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -16,6 +16,7 @@ build:
 
 requirements:
   build:
+    - {{ compiler('c') }}  # [unix]
     - {{ compiler('cxx') }}
     - {{ compiler('rust') }}
     - {{ stdlib("c") }}
